--- a/Dockerfile.playground.cms
+++ b/Dockerfile.playground.cms
@@ -1,6 +1,6 @@
 FROM strapi/base
 ARG STRAPI_ADMIN_PATH
-ENV STRAPI_ADMIN_PATH=$STRAPI_ADMIN_PAT
+ENV STRAPI_ADMIN_PATH=$STRAPI_ADMIN_PATH
 ENV NODE_ENV production
 WORKDIR /m3ntorshipcom-cms
 COPY ./backend/package.json ./
