--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "autoprefixer": "^9.8.1",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
+    "next": "^9.4.4",
     "postcss-extend": "^1.0.5",
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.2.1",
