make goals CT field required and add default values

--- a/backend/api/goals-list/models/goals-list.settings.json
+++ b/backend/api/goals-list/models/goals-list.settings.json
@@ -10,7 +10,9 @@
   },
   "attributes": {
     "text": {
-      "type": "string"
+      "type": "string",
+      "required": true,
+      "default": "Goals of the initiative "
     }
   }
 }
