--- a/backend/api/goals/models/goals.settings.json
+++ b/backend/api/goals/models/goals.settings.json
@@ -10,18 +10,20 @@
   },
   "attributes": {
     "title": {
-      "type": "string"
+      "type": "string",
+      "default": "Goals",
+      "required": true
     },
     "side_image": {
-      "collection": "file",
+      "model": "file",
       "via": "related",
       "allowedTypes": [
-        "images",
         "files",
+        "images",
         "videos"
       ],
       "plugin": "upload",
-      "required": false
+      "required": true
     },
     "goals_lists": {
       "collection": "goals-list"
