add form fields

--- a/backend/api/apply-page-form/models/apply-page-form.settings.json
+++ b/backend/api/apply-page-form/models/apply-page-form.settings.json
@@ -17,6 +17,28 @@
     },
     "description": {
       "type": "text"
+    },
+    "mentorImage": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false
+    },
+    "menteeImage": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false
     }
   }
 }
