testing cms deployment

--- a/.github/workflows/playground_dev_cms.yaml
+++ b/.github/workflows/playground_dev_cms.yaml
@@ -5,6 +5,7 @@ on:
     branches:
       # - develop
       # - playground-deployment
+      - deploy-cms
       - bala7
 env:
   # fixed deployment envs
