add button to apply form

--- a/backend/api/apply-page-form/models/apply-page-form.settings.json
+++ b/backend/api/apply-page-form/models/apply-page-form.settings.json
@@ -39,6 +39,16 @@
       ],
       "plugin": "upload",
       "required": false
+    },
+    "MenteeButton": {
+      "type": "component",
+      "repeatable": true,
+      "component": "general.button"
+    },
+    "MentorButton": {
+      "type": "component",
+      "repeatable": true,
+      "component": "general.button"
     }
   }
 }
