added UID fro batch content type

--- a/backend/api/batch/models/batch.settings.json
+++ b/backend/api/batch/models/batch.settings.json
@@ -29,6 +29,11 @@
       "collection": "member",
       "via": "batches",
       "dominant": true
+    },
+    "batch_slug": {
+      "type": "uid",
+      "targetField": "title",
+      "required": false
     }
   }
 }
