Fixing header image position and changed content type to fix it

--- a/backend/api/contribute/models/contribute.settings.json
+++ b/backend/api/contribute/models/contribute.settings.json
@@ -25,7 +25,7 @@
       "component": "general.link",
       "required": true
     },
-    "side_image": {
+    "header_image": {
       "model": "file",
       "via": "related",
       "allowedTypes": [
