--- a/backend/api/home-header/models/home-header.settings.json
+++ b/backend/api/home-header/models/home-header.settings.json
@@ -25,7 +25,7 @@
       "component": "general.link",
       "required": true
     },
-    "side_image": {
+    "header_image": {
       "model": "file",
       "via": "related",
       "allowedTypes": [
