Changing heading ct name to title

--- a/backend/api/apply-page-intro-section/models/apply-page-intro-section.settings.json
+++ b/backend/api/apply-page-intro-section/models/apply-page-intro-section.settings.json
@@ -9,8 +9,10 @@
     "timestamps": true
   },
   "attributes": {
-    "heading": {
-      "type": "string"
+    "title": {
+      "type": "string",
+      "default": "Hello title",
+      "required": true
     },
     "headingGradientText": {
       "type": "string"
