--- a/backend/api/footer/models/footer.settings.json
+++ b/backend/api/footer/models/footer.settings.json
@@ -41,6 +41,11 @@
       "repeatable": false,
       "component": "general.footer-about",
       "required": true
+    },
+    "title_links": {
+      "type": "string",
+      "required": true,
+      "default": "Links"
     }
   }
 }
