--- a/backend/api/apply-page-intro-section/models/apply-page-intro-section.settings.json
+++ b/backend/api/apply-page-intro-section/models/apply-page-intro-section.settings.json
@@ -31,7 +31,7 @@
       "plugin": "upload",
       "required": false
     },
-    "Image": {
+    "side_image": {
       "model": "file",
       "via": "related",
       "allowedTypes": [
