Fixing Apply page styling

--- a/backend/api/apply-page-form/models/apply-page-form.settings.json
+++ b/backend/api/apply-page-form/models/apply-page-form.settings.json
@@ -9,10 +9,11 @@
     "timestamps": true
   },
   "attributes": {
-    "heading": {
-      "type": "string"
+    "title": {
+      "type": "string",
+      "default": "You want to apply as?"
     },
-    "gradiendtText": {
+    "headingGradientText": {
       "type": "string"
     },
     "description": {
