--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.2.6",
     "framer-motion": "^2.3.0",
     "next": "9.5.1",
+    "nprogress": "^0.2.0",
     "postcss-extend": "^1.0.5",
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.2.1",
