--- a/backend/api/apply-page-form/models/apply-page-form.settings.json
+++ b/backend/api/apply-page-form/models/apply-page-form.settings.json
@@ -43,13 +43,24 @@
     },
     "MenteeButton": {
       "type": "component",
-      "repeatable": true,
+      "repeatable": false,
       "component": "general.button"
     },
     "MentorButton": {
       "type": "component",
-      "repeatable": true,
+      "repeatable": false,
       "component": "general.button"
+    },
+    "apply_side_image": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false
     }
   }
 }
