--- a/Dockerfile.playground.backend
+++ b/Dockerfile.playground.backend
@@ -1,11 +1,14 @@
-FROM strapi/base
+FROM node:12.16-alpine3.11 AS build
+
 ARG STRAPI_ADMIN_PATH
-ENV STRAPI_ADMIN_PATH=$STRAPI_ADMIN_PATH
+
 ENV NODE_ENV production
+
 WORKDIR /m3ntorshipcom-cms
 COPY ./backend/package.json ./
 COPY ./backend/yarn.lock ./
 
+COPY ./backend/build ./build
 COPY ./backend/api ./api
 COPY ./backend/components ./components
 COPY ./backend/config ./config
@@ -14,7 +17,10 @@ COPY ./backend/public ./public
 COPY ./backend/favicon.ico ./favicon.ico
 
 RUN yarn install
-RUN yarn build
+
+FROM node:12.16-alpine3.11
+WORKDIR /m3ntorshipcom-cms
+COPY --from=build /m3ntorshipcom-cms .
 
 EXPOSE 1337
 
