--- a/backend/api/top-bar/models/top-bar.settings.json
+++ b/backend/api/top-bar/models/top-bar.settings.json
@@ -9,17 +9,17 @@
     "timestamps": true
   },
   "attributes": {
-    "logo": {
-      "type": "string",
-      "default": "M3ntorship",
-      "required": true
-    },
     "sub_text": {
       "type": "string",
       "default": "Level-up your tech skills",
       "required": true
     },
     "apply_btn": {
+      "type": "component",
+      "repeatable": false,
+      "component": "general.link"
+    },
+    "logo_link": {
       "type": "component",
       "repeatable": false,
       "component": "general.link"
