--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "framer-motion": "^2.3.0",
+    "globby": "^11.0.1",
     "next": "9.5.1",
     "nprogress": "^0.2.0",
     "postcss-extend": "^1.0.5",
