--- a/backend/api/pages-seo/models/pages-seo.settings.json
+++ b/backend/api/pages-seo/models/pages-seo.settings.json
@@ -13,6 +13,9 @@
       "type": "component",
       "repeatable": true,
       "component": "general.page-seo"
+    },
+    "page_name": {
+      "type": "uid"
     }
   }
 }
