Make the Seo Component nonrepeatable

--- a/backend/api/pages-seo/models/pages-seo.settings.json
+++ b/backend/api/pages-seo/models/pages-seo.settings.json
@@ -11,7 +11,7 @@
   "attributes": {
     "seo": {
       "type": "component",
-      "repeatable": true,
+      "repeatable": false,
       "component": "general.page-seo"
     },
     "page_name": {
