add regext to website url
- Add Regext to match the following url pattern

https://www.m3ntorship.com

- Add a default value to it

--- a/backend/api/setting/models/setting.settings.json
+++ b/backend/api/setting/models/setting.settings.json
@@ -11,7 +11,9 @@
   "attributes": {
     "website_url": {
       "type": "string",
-      "required": true
+      "required": true,
+      "regex": "https?:\\/\\/(www\\.)?[-a-zA-Z0-9@:%._\\+~#=]{1,256}\\.[a-zA-Z0-9()]{1,6}\\b([-a-zA-Z0-9()@:%_\\+.~#?&//=]*)",
+      "default": "https://www.m3ntorship.com"
     }
   }
 }
