add project content type

--- a/backend/api/batch/models/batch.settings.json
+++ b/backend/api/batch/models/batch.settings.json
@@ -34,6 +34,10 @@
       "type": "uid",
       "targetField": "title",
       "required": false
+    },
+    "projects": {
+      "via": "batches",
+      "collection": "project"
     }
   }
 }
