--- a/backend/api/project/models/project.settings.json
+++ b/backend/api/project/models/project.settings.json
@@ -45,6 +45,14 @@
     "nav_to_project_page_text": {
       "type": "string",
       "required": true
+    },
+    "project_stack": {
+      "type": "string"
+    },
+    "live_site_link": {
+      "type": "component",
+      "repeatable": false,
+      "component": "general.link"
     }
   }
 }
