Add batch header CT

--- a/backend/api/batch/models/batch.settings.json
+++ b/backend/api/batch/models/batch.settings.json
@@ -36,8 +36,13 @@
       "required": false
     },
     "projects": {
-      "via": "batches",
-      "collection": "project"
+      "collection": "project",
+      "via": "batches"
+    },
+    "batch_header": {
+      "type": "component",
+      "repeatable": false,
+      "component": "general.batch-header"
     }
   }
 }
