add animate at mobile CT to setting API

--- a/backend/api/setting/models/setting.settings.json
+++ b/backend/api/setting/models/setting.settings.json
@@ -14,6 +14,11 @@
       "required": true,
       "regex": "https?:\\/\\/(www\\.)?[-a-zA-Z0-9@:%._\\+~#=]{1,256}\\.[a-zA-Z0-9()]{1,6}\\b([-a-zA-Z0-9()@:%_\\+.~#?&//=]*)",
       "default": "https://www.m3ntorship.com"
+    },
+    "animate_at_mobile": {
+      "type": "boolean",
+      "default": false,
+      "required": true
     }
   }
 }
