delete old animated at mobile and add enable mobile animations

--- a/backend/api/setting/models/setting.settings.json
+++ b/backend/api/setting/models/setting.settings.json
@@ -15,10 +15,8 @@
       "regex": "https?:\\/\\/(www\\.)?[-a-zA-Z0-9@:%._\\+~#=]{1,256}\\.[a-zA-Z0-9()]{1,6}\\b([-a-zA-Z0-9()@:%_\\+.~#?&//=]*)",
       "default": "https://www.m3ntorship.com"
     },
-    "animate_at_mobile": {
-      "type": "boolean",
-      "default": false,
-      "required": true
+    "enable_mobile_animations": {
+      "type": "json"
     }
   }
 }
