introduce deployment step for dev env

--- a/.github/workflows/playground_fullstack_dev.yaml
+++ b/.github/workflows/playground_fullstack_dev.yaml
@@ -75,3 +75,42 @@ jobs:
         build_args: STRAPI_ADMIN_PATH=${{secrets.M3_STRAPI_ADMIN_PATH}}
         
     # DELETE OLD TAGS https://hub.docker.com/v2/repositories/amd64/ubuntu/tags?page_size=5000
+  deploy:
+    needs: 
+      - build_frontend
+      - build_backend 
+    runs-on: ubuntu-latest
+    env:
+      M3_VERSION: ${{needs.prepare.outputs.version}}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: azure/setup-kubectl@v1
+      - name: Kubectl configuration
+        shell: bash
+        run: |
+          mkdir -p ~/.kube
+          echo ${{ secrets.KUBE_CONFIG }} | base64 -d -i > ~/.kube/config
+      - name: install moustache
+        run: |
+          curl -sSL https://git.io/get-mo -o mo
+          chmod +x mo
+          sudo mv mo /usr/local/bin/
+          echo "works" | mo
+
+      # deploy dev
+      - name: deploy-dev
+        env:
+          M3_DEPLOYMENT_PATH: deploy/dev/fullstack
+          TEMP_DIR: temp
+          M3_NAMESPACE: default
+          M3_PROJECT: m3ntorshipcom
+          M3_COMPONENET: fullstack
+          M3_ENVIRONMENT: dev
+          M3_REPLICAS: "1"
+          M3_PORT_FRONTEND: "3000"
+          M3_PORT_BACKEND: "1337"
+          M3_SHA: ${{needs.prepare.outputs.sha}}
+        run: |
+          mkdir -p $TEMP_DIR
+          for f in $M3_DEPLOYMENT_PATH/apply/*; do mo -u "$f" > $TEMP_DIR/"$(basename $f)"; done
+          kubectl apply -f $TEMP_DIR
