--- a/.github/workflows/playground_fullstack_dev.yaml
+++ b/.github/workflows/playground_fullstack_dev.yaml
@@ -80,8 +80,6 @@ jobs:
       - build_frontend
       - build_backend
     runs-on: ubuntu-latest
-    env:
-      M3_VERSION: ${{needs.prepare.outputs.version}}
     steps:
       - uses: actions/checkout@v2
       - uses: azure/setup-kubectl@v1
@@ -106,9 +104,10 @@ jobs:
           M3_PROJECT: m3ntorshipcom
           M3_COMPONENET: fullstack
           M3_ENVIRONMENT: dev
-          M3_REPLICAS: "1"
-          M3_PORT_FRONTEND: "3000"
-          M3_PORT_BACKEND: "1337"
+          M3_REPLICAS: '1'
+          M3_PORT_FRONTEND: '3000'
+          M3_PORT_BACKEND: '1337'
+          M3_VERSION: develop
           M3_SHA: ${{needs.prepare.outputs.sha}}
         run: |
           echo $M3_VERSION
