--- a/.github/workflows/playground_fullstack_live.yaml
+++ b/.github/workflows/playground_fullstack_live.yaml
@@ -79,8 +79,8 @@ jobs:
       - build_frontend
       - build_backend 
     runs-on: ubuntu-latest
-    env:
-      M3_VERSION: ${{needs.prepare.outputs.version}}
+    # env:
+      # M3_VERSION: ${{needs.prepare.outputs.version}}
     steps:
       - uses: actions/checkout@v2
       - uses: azure/setup-kubectl@v1
@@ -108,6 +108,7 @@ jobs:
           M3_REPLICAS: "3"
           M3_PORT_FRONTEND: "3000"
           M3_PORT_BACKEND: "1337"
+          M3_VERSION: master #hardcoded here until checking passing job env issue
           M3_SHA: ${{needs.prepare.outputs.sha}}
         run: |
           mkdir -p $TEMP_DIR
