--- a/deploy/dev/fullstack/apply/deployment.yaml
+++ b/deploy/dev/fullstack/apply/deployment.yaml
@@ -1,43 +1,1 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: '{{{M3_PROJECT}}}-{{{M3_COMPONENET}}}-{{{M3_ENVIRONMENT}}}'
-  namespace: '{{{M3_NAMESPACE}}}'
-  labels:
-    project: '{{{M3_PROJECT}}}'
-    environment: '{{{M3_PROJECT}}}'
-    componenet: '{{{M3_COMPONENET}}}'
-    application: '{{{M3_PROJECT}}}-{{{M3_COMPONENET}}}-{{{M3_ENVIRONMENT}}}'
-    version: '{{{M3_VERSION}}}'
-    sha: '{{{M3_SHA}}}'
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      application: '{{{M3_PROJECT}}}-{{{M3_COMPONENET}}}-{{{M3_ENVIRONMENT}}}'
-  template:
-    metadata:
-      labels:
-        project: '{{{M3_PROJECT}}}'
-        environment: '{{{M3_PROJECT}}}'
-        componenet: '{{{M3_COMPONENET}}}'
-        application: '{{{M3_PROJECT}}}-{{{M3_COMPONENET}}}-{{{M3_ENVIRONMENT}}}'
-    spec:
-      containers:
-        - name: '{{{M3_PROJECT}}}-{{{M3_COMPONENET}}}-{{{M3_ENVIRONMENT}}}-backend'
-          image: 'm3ntorshipci/m3ntorshipcom-backend:{{{M3_VERSION}}}'
-          imagePullPolicy: Always
-          envFrom:
-            - secretRef:
-                name: '{{{M3_PROJECT}}}-{{{M3_COMPONENET}}}-{{{M3_ENVIRONMENT}}}'
-          ports:
-            - name: web-backend
-              containerPort: {{{M3_PORT_BACKEND}}}
-              protocol: TCP
-        - name: '{{{M3_PROJECT}}}-{{{M3_COMPONENET}}}-{{{M3_ENVIRONMENT}}}-frontend'
-          image: 'm3ntorshipci/m3ntorshipcom-frontend:{{{M3_VERSION}}}'
-          imagePullPolicy: Always
-          ports:
-            - name: web-frontend
-              containerPort: {{{M3_PORT_FRONTEND}}}
-              protocol: TCP
+../../../commons_fullstack/deployment.yaml
