--- a/deploy/live/fullstack/apply/ingress.yaml
+++ b/deploy/live/fullstack/apply/ingress.yaml
@@ -22,7 +22,21 @@ spec:
               serviceName: '{{{M3_PROJECT}}}-{{{M3_COMPONENET}}}-{{{M3_ENVIRONMENT}}}'
               servicePort: 80
             path: /
+    - host: 'm3ntorship.com'
+      http:
+        paths:
+          - backend:
+              serviceName: '{{{M3_PROJECT}}}-{{{M3_COMPONENET}}}-{{{M3_ENVIRONMENT}}}'
+              servicePort: 80
+            path: /
     - host: 'be.m3ntorship.net'
+      http:
+        paths:
+          - backend:
+              serviceName: '{{{M3_PROJECT}}}-{{{M3_COMPONENET}}}-{{{M3_ENVIRONMENT}}}'
+              servicePort: 81
+            path: /
+    - host: 'be.m3ntorship.com'
       http:
         paths:
           - backend:
