--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,9 @@
     "@storybook/addon-viewport": "^6.0.20",
     "@storybook/addons": "^6.0.20",
     "@storybook/react": "^6.0.20",
-    "babel-loader": "^8.1.0"
+    "babel-loader": "^8.1.0",
+    "html-critical-webpack-plugin": "^2.1.0",
+    "html-webpack-plugin": "^4.4.1",
+    "mini-css-extract-plugin": "^0.11.0"
   }
 }
