--- a/.github/workflows/playground_fullstack_dev.yaml
+++ b/.github/workflows/playground_fullstack_dev.yaml
@@ -5,12 +5,12 @@ on:
     branches:
       - develop
       - deployment-fullstack-workflows
+      - test-deployment
 
 jobs:
-  
   prepare:
     runs-on: ubuntu-latest
-    
+
     outputs:
       sha: ${{ steps.prepare.outputs.sha }}
       # version: ${{ steps.prepare.outputs.version }}
@@ -20,63 +20,64 @@ jobs:
       dockerfile_frontend: Dockerfile.playground.frontend
       dockerfile_backend: Dockerfile.playground.backend
     steps:
-    - uses: actions/checkout@v2
-    - id: prepare
-      run: |
-        echo "::set-output name=sha::$(git rev-parse HEAD)"
-        echo "::set-output name=version::$(git rev-parse --short=4 HEAD)"
-  
+      - uses: actions/checkout@v2
+      - id: prepare
+        run: |
+          echo "::set-output name=sha::$(git rev-parse HEAD)"
+          echo "::set-output name=version::$(git rev-parse --short=4 HEAD)"
+
   build_frontend:
     needs: [prepare]
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: install dependencies
-      run: |
-        yarn --cwd frontend 
-        
-    - name: build
-      env:
-        M3NTORSHIP_APP_STRAPI_URL: http://localhost:1337
-      run: |
-        yarn --cwd frontend build
-    
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: ${{needs.prepare.outputs.image_frontend}}
-        dockerfile: ${{needs.prepare.outputs.dockerfile_frontend}}
-        tags: ${{needs.prepare.outputs.version}}
+      - uses: actions/checkout@v2
+      - name: install dependencies
+        run: |
+          yarn --cwd frontend
+
+      - name: build
+        env:
+          M3NTORSHIP_APP_STRAPI_URL: http://localhost:1337
+        run: |
+          yarn --cwd frontend build
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: ${{needs.prepare.outputs.image_frontend}}
+          dockerfile: ${{needs.prepare.outputs.dockerfile_frontend}}
+          tags: ${{needs.prepare.outputs.version}}
   build_backend:
     needs: [prepare]
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: install dependencies
-      run: |
-        yarn --cwd backend 
-        
-    - name: build
-      run: |
-        yarn --cwd backend build
+      - uses: actions/checkout@v2
+      - name: install dependencies
+        run: |
+          yarn --cwd backend
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: ${{needs.prepare.outputs.image_backend}}
-        dockerfile: ${{needs.prepare.outputs.dockerfile_backend}}
-        tags: ${{needs.prepare.outputs.version}}
-        build_args: STRAPI_ADMIN_PATH=${{secrets.M3_STRAPI_ADMIN_PATH}}
-        
+      - name: build
+        run: |
+          yarn --cwd backend build
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: ${{needs.prepare.outputs.image_backend}}
+          dockerfile: ${{needs.prepare.outputs.dockerfile_backend}}
+          tags: ${{needs.prepare.outputs.version}}
+          build_args: STRAPI_ADMIN_PATH=${{secrets.M3_STRAPI_ADMIN_PATH}}
+
+
     # DELETE OLD TAGS https://hub.docker.com/v2/repositories/amd64/ubuntu/tags?page_size=5000
   deploy:
-    needs: 
+    needs:
       - build_frontend
       - build_backend
     runs-on: ubuntu-latest
