--- a/.github/workflows/playground_fullstack_dev.yaml
+++ b/.github/workflows/playground_fullstack_dev.yaml
@@ -6,8 +6,7 @@ on:
       - develop
       - deployment-fullstack-workflows
 
-jobs:
-  
+jobs: 
   prepare:
     runs-on: ubuntu-latest
     
@@ -76,7 +75,8 @@ jobs:
         
     # DELETE OLD TAGS https://hub.docker.com/v2/repositories/amd64/ubuntu/tags?page_size=5000
   deploy:
-    needs: 
+    needs:
+      - prepare 
       - build_frontend
       - build_backend
     runs-on: ubuntu-latest
