Add batch designers relation to cohorts

--- a/backend/api/batch/models/batch.settings.json
+++ b/backend/api/batch/models/batch.settings.json
@@ -36,13 +36,18 @@
       "required": false
     },
     "projects": {
-      "via": "batches",
-      "collection": "project"
+      "collection": "project",
+      "via": "batches"
     },
     "batch_header": {
       "type": "component",
       "repeatable": false,
       "component": "general.batch-header"
+    },
+    "batch_designers": {
+      "collection": "member",
+      "via": "members",
+      "dominant": true
     }
   }
 }
