--- a/backend/api/member/models/member.settings.json
+++ b/backend/api/member/models/member.settings.json
@@ -20,6 +20,10 @@
     "batches": {
       "via": "batch_mentees",
       "collection": "batch"
+    },
+    "members": {
+      "via": "batch_designers",
+      "collection": "batch"
     }
   }
 }
