--- a/deploy/commons_fullstack/service.yaml
+++ b/deploy/commons_fullstack/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: '{{{M3_PROJECT}}}-{{{M3_COMPONENET}}}-{{{M3_ENVIRONMENT}}}'
-  namespace: 'default'
+  namespace: '{{{M3_NAMESPACE}}}'
   labels:
     project: '{{{M3_PROJECT}}}'
     environment: '{{{M3_ENVIRONMENT}}}'
